# git-squash-blame

./: .gitignore  README.md  pyproject.toml  squashblame.py
