[tool.poetry]
name = "git-squash-blame"
version = "0.1.0"
description = "Squash history while preserving blame"
authors = ["Evan Grim <evan@mirgnave.com>"]
packages = [
    { include = "squashblame.py" }
]

[tool.poetry.scripts]
git-squash-blame = 'squashblame:main'

[tool.poetry.dependencies]
python = "^3.7"
gitpython = "^3.0.3"
fire = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
